# ml-taxi-demand-predictor

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-load_and_validate_raw_data.ipynb  02-transform_raw_data_into_ts_data.ipynb  03-transform_ts_data_into_features_and_target.ipynb  04-transform_raw_data_into_features_and_targets.ipynb  05-visualize_training_data.ipynb  06-baseline_model.ipynb  07-xboost_model.ipynb  08-lightgbm_model.ipynb  09-challenge_lightgbm_model_features_centroids.ipynb  09-lightgbm_model_with_feature_engineering.ipynb  10-lightgbm_model_with_hyperparameter_tuning.ipynb
src/: convert_shp_coords.py  data.py  data_split.py  model_testing.py  paths.py  plot.py
