[tool.poetry]
name = "ml-taxi-demand-predictor"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"
pyarrow = "^15.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
