[tool.poetry]
name = "ml-taxi-demand-predictor"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"
pyarrow = "^15.0.2"
tdqm = "^0.0.1"
plotly = "^5.20.0"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
geopandas = "^0.14.3"
matplotlib = "^3.8.4"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
